# onimesh

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  makefile  onimesh.sln  onimesh.vcxproj  onimesh.vcxproj.filters
src/: common.h  filesystemHelper.cpp  filesystemHelper.h  onimesh.cpp  onimeshfunctions.cpp  onimeshfunctions.h
